tests/should-fail/semantics/modulo-real.j

globals
    real x = 123.5 % 21
    real y = 123 % 21.5
    real z = 123.5 % 21.5
endglobals
